// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <Text>
        Some Short Headline
      </Text>
      <View>
        <ArticleFlags
          color="rgba(255, 255, 255, 1)"
        />
      </View>
    </View>
  </View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <CenteredCaption
          credits="Some Credits"
          text="Some Caption"
        />
      }
      uri="https://crop169.io"
      width={1180}
    />
    <CenteredCaption
      credits="Some Credits"
      text="Some Caption"
    />
  </View>
  <View>
    <View>
      <View>
        <ArticleBylineWithLinks
          ast={
            Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Some byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ]
          }
          color="#1D1D1B"
        />
      </View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`4. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <Text>
        Some Headline
      </Text>
      <View>
        <ArticleFlags
          color="rgba(255, 255, 255, 1)"
        />
      </View>
    </View>
  </View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <CenteredCaption
          credits="Some Credits"
          text="Some Caption"
        />
      }
      uri="https://crop169.io"
      width={1180}
    />
    <CenteredCaption
      credits="Some Credits"
      text="Some Caption"
    />
  </View>
  <View>
    <View>
      <View>
        <ArticleBylineWithLinks
          ast={
            Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Some byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ]
          }
          color="#1D1D1B"
        />
      </View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
